# starbot

./: .gitignore  Cargo.toml  README.md  sqlx-data.json
entity/: Cargo.toml
entity/src/: dashboard.rs  lib.rs  train.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221224_000001_initial.rs  m20221224_232202_dashboard.rs
migrations/: 0_initial_migration.sql
src/: command.rs  interaction.rs  main.rs  model.rs  train.rs
src/command/: argument.rs  train.rs
src/model/: monitor.rs  train.rs
src/train/: command.rs  model.rs
