[package]
name = "starbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
serenity = { version = "0.11.5", default-features = false, features = ["cache", "builder", "gateway", "client", "model", "rustls_backend"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "time", "offline"] }
strum = "0.24.1"
strum_macros = "0.24.3"
time = "0.3.16"
tokio = "1.21.2"
url = "2.3.1"
