[package]
name = "starbot"
version = "0.2.0"
edition = "2021"

[workspace]
members = [
  "entity",
  "migration",
]

[workspace.dependencies]
chrono = "0.4.22"
clap = { version = "4.0.0", features = ["derive", "env"] }
env_logger = "0.9.3"
eyre = "0.6.8"
futures = "0.3.25"
poise = "0.4.1"
sea-orm = { version = "0.10.2", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "0.10.2", features = ["sqlx-sqlite",
"runtime-tokio-rustls"] }
serenity = { version = "0.11.5", default-features = false, features = ["cache", "builder", "gateway", "client", "model", "rustls_backend"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "time", "offline"] }
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = "1.21.2"
url = "2.3.1"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

chrono = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
poise = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serenity = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
clap = { workspace = true }

[profile.release-debug]
inherits = "release"
debug = true
