[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
sea-orm = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
poise = { workspace = true }
serenity = { workspace = true }
url = { workspace = true }
